--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,8 +6,8 @@
   },
   "rich-text": {
     "props": {
-      "text": "*Hello, Worldasas!*",
-      "textPosition": "CENTER"
+      "text": "**Hello, World!**",
+      "textPosition": "RIGTH"
     }
   }
 }
