--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -11,7 +11,7 @@
   
   "image#brand1": {
     "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png"
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png"
     }
   },
   
