--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -26,6 +26,7 @@
     },
     "children": [
       "product-name",
+      "product-identifier.product",
       "product-price",
       "buy-button"
     ]
