--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -29,7 +29,8 @@
       "product-identifier.product",
       "product-price",
       "flex-layout.row#qty-sku",
-      "buy-button"
+      "buy-button",
+      "shipping-simulator"
     ]
   },
   "product-name": {
@@ -54,8 +55,7 @@
 "flex-layout.row#qty-sku": {
   "children": [
     "sku-selector",
-    "product-quantity",
-    "shipping-simulator"
+    "product-quantity"
   ]
 },
 "breadcrumb": {
