--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -66,9 +66,10 @@
 },
   "sku-selector": {
     "props": {
+      "hideImpossibleCombinations": false,
       "initialSelection": "empty",
-      "showVariationsLabels": true,
-      "showVariationsErrorMessage": true
+      "showVariationsErrorMessage": true,
+      "showValueForVariation": "image"
     }
   },
   "product-quantity": {
