--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -71,18 +71,16 @@
           ]
     }, 
    
-    "tab-content.item#1": {
+    "tab-content.item#home1": {
         "children": [
-          "rich-text#home1",
-          "rich-text#home2"
+          "rich-text#home1"
         ],
         "props": {
           "tabId": "majorAppliances"
         }
       },
-      "tab-content.item#2": {
+      "tab-content.item#home2": {
         "children": [
-          "rich-text#home1",
           "rich-text#home2"
         ],
         "props": {
