--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -52,7 +52,7 @@
     },
     "tab-list.item#home1": {
         "props": {
-          "tabId": "majorAppliances",
+          "tabId": "sobre",
           "label": "Sobre",
           "defaultActiveTab": true
         }
