--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -59,8 +59,8 @@
       },
       "tab-list.item#home2": {
         "props": {
-          "tabId": "electronics",
-          "label": "Electronics",
+          "tabId": "instagram",
+          "label": "Instagram",
           "defaultActiveTab": true
         }
       },  
@@ -81,7 +81,7 @@
       },
       "tab-content.item#home2": {
         "children": [
-          "rich-text#home2"
+          "iframe"
         ],
         "props": {
           "tabId": "electronics"
@@ -99,6 +99,13 @@
           "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
           "textPosition": "CENTER",
           "font": "t-heading-3"
+        }
+      },
+      "iframe": {
+        "props": {
+          "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+          "width": 1000,
+          "height": 800
         }
       }
 }
