--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -12,6 +12,13 @@
       "responsive-layout.mobile#mobile"
     ]
   },
+
+  "rich-text": {
+    "props": {
+      "textPosition": "RIGHT",
+      "text": "**Hello, World!**"
+    }
+  },
   
   "info-card#button-right": {
     "props": {
